--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "story-book-demo",
   "version": "0.1.0",
   "private": true,
+  "main": "src/main.comp.js",
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
